// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/containers/ContentManagement/Product/Add-v2/lib/section/QualityService/index render 1`] = `
<div
  style={
    Object {
      "backgroundImage": "url(/ewz-mytens-pub-prod/catalogpublic/mycarrier/assets/metro-ethernet/metro-ethernet-qos.jpeg)",
      "backgroundSize": "cover",
      "border": "2px dashed #E4E7E9",
      "position": "relative",
    }
  }
>
  <SectionMark
    description=""
    isDisplay={false}
    nonmandatory={true}
    onChange={[Function]}
    title="Quality of Service"
  />
  <WithStyles(ForwardRef(Grid))
    container={true}
    style={
      Object {
        "alignItems": "center",
        "marginInline": "auto",
        "maxWidth": "1280px",
        "padding": "5rem 4rem 3rem",
        "width": "100%",
      }
    }
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={7}
      sm={7}
      xs={12}
    >
      <div
        style={
          Object {
            "marginBottom": "10px",
          }
        }
      >
        <TextField
          colorPlaceholder="white"
          control={Object {}}
          disabled={false}
          fontSize="1.25rem"
          multiline={true}
          name="QualityServiceTitleid"
          noSpacing={true}
          placeholder="Ketik konten judul di sini dalam Bahasa.."
          position="left"
          weight="bold"
        />
      </div>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={5}
      sm={5}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
        }
      }
      xs={12}
    >
      <div
        style={
          Object {
            "color": "#E4E7E9",
            "marginBottom": "10px",
          }
        }
      >
        <TextEditorComp
          onChange={[Function]}
          previewMode={false}
          tab="id"
          value="test"
        />
      </div>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <div />
</div>
`;

exports[`src/containers/ContentManagement/Product/Add-v2/lib/section/QualityService/index render null 1`] = `<React.Fragment />`;

exports[`src/containers/ContentManagement/Product/Add-v2/lib/section/QualityService/index render tab en 1`] = `
<div
  style={
    Object {
      "backgroundImage": "url(/ewz-mytens-pub-prod/catalogpublic/mycarrier/assets/metro-ethernet/metro-ethernet-qos.jpeg)",
      "backgroundSize": "cover",
      "border": "2px dashed #E4E7E9",
      "position": "relative",
    }
  }
>
  <SectionMark
    description=""
    isDisplay={false}
    nonmandatory={true}
    onChange={[Function]}
    title="Quality of Service"
  />
  <WithStyles(ForwardRef(Grid))
    container={true}
    style={
      Object {
        "alignItems": "center",
        "marginInline": "auto",
        "maxWidth": "1280px",
        "padding": "5rem 4rem 3rem",
        "width": "100%",
      }
    }
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={7}
      sm={7}
      xs={12}
    >
      <div
        style={
          Object {
            "marginBottom": "10px",
          }
        }
      >
        <TextField
          colorPlaceholder="white"
          control={Object {}}
          disabled={false}
          fontSize="1.25rem"
          multiline={true}
          name="QualityServiceTitleen"
          noSpacing={true}
          placeholder="Type the content of the title here in English.."
          position="left"
          weight="bold"
        />
      </div>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={5}
      sm={5}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
        }
      }
      xs={12}
    >
      <div
        style={
          Object {
            "color": "#E4E7E9",
            "marginBottom": "10px",
          }
        }
      >
        <TextEditorComp
          onChange={[Function]}
          previewMode={false}
          tab="en"
          value="test"
        />
      </div>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <div />
</div>
`;

exports[`src/containers/ContentManagement/Product/Add-v2/lib/section/QualityService/index render tab en previewMode true 1`] = `
<div
  style={
    Object {
      "backgroundImage": "url(/ewz-mytens-pub-prod/catalogpublic/mycarrier/assets/metro-ethernet/metro-ethernet-qos.jpeg)",
      "backgroundSize": "cover",
      "border": "none",
      "position": "relative",
    }
  }
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    style={
      Object {
        "alignItems": "center",
        "marginInline": "auto",
        "maxWidth": "1280px",
        "padding": "3rem 5rem",
        "width": "100%",
      }
    }
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={7}
      sm={7}
      xs={12}
    >
      <div
        style={
          Object {
            "marginBottom": "10px",
          }
        }
      >
        <TextField
          colorPlaceholder="white"
          control={Object {}}
          disabled={true}
          fontSize="1.25rem"
          multiline={true}
          name="QualityServiceTitleen"
          noSpacing={true}
          placeholder="Type the content of the title here in English.."
          position="left"
          weight="bold"
        />
      </div>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={5}
      sm={5}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
        }
      }
      xs={12}
    >
      <div
        style={
          Object {
            "color": "#E4E7E9",
            "marginBottom": "10px",
          }
        }
      >
        <TextEditorComp
          onChange={[Function]}
          previewMode={true}
          tab="en"
          value="test"
        />
      </div>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <div
    className={false}
  />
</div>
`;

exports[`src/containers/ContentManagement/Product/Add-v2/lib/section/QualityService/index render tab id previewMode true 1`] = `
<div
  style={
    Object {
      "backgroundImage": "url(/ewz-mytens-pub-prod/catalogpublic/mycarrier/assets/metro-ethernet/metro-ethernet-qos.jpeg)",
      "backgroundSize": "cover",
      "border": "none",
      "position": "relative",
    }
  }
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    style={
      Object {
        "alignItems": "center",
        "marginInline": "auto",
        "maxWidth": "1280px",
        "padding": "3rem 5rem",
        "width": "100%",
      }
    }
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={7}
      sm={7}
      xs={12}
    >
      <div
        style={
          Object {
            "marginBottom": "10px",
          }
        }
      >
        <TextField
          colorPlaceholder="white"
          control={Object {}}
          disabled={true}
          fontSize="1.25rem"
          multiline={true}
          name="QualityServiceTitleid"
          noSpacing={true}
          placeholder="Ketik konten judul di sini dalam Bahasa.."
          position="left"
          weight="bold"
        />
      </div>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={5}
      sm={5}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
        }
      }
      xs={12}
    >
      <div
        style={
          Object {
            "color": "#E4E7E9",
            "marginBottom": "10px",
          }
        }
      >
        <TextEditorComp
          onChange={[Function]}
          previewMode={true}
          tab="id"
          value="test"
        />
      </div>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <div
    className={false}
  />
</div>
`;
